--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -10,7 +10,7 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 android {
-    namespace = "com.amaresh.b_barna_app"
+    namespace = "com.bbarna.b_barna_app"
     compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
@@ -25,7 +25,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.amaresh.b_barna_app"
+        applicationId = "com.bbarna.b_barna_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 23
@@ -48,6 +48,9 @@ android {
             minifyEnabled false
             shrinkResources false
             signingConfig signingConfigs.release // ✅ Reference the signing config
+            ndk {
+                debugSymbolLevel 'FULL'
+            }
         }
     }
 }
