--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   intl: ^0.20.2
   flutter_html_table: ^3.0.0
   flutter_spinkit: ^5.2.2
+  printing: ^5.12.0
+  flutter_local_notifications: ^17.2.2
 
 dev_dependencies:
   flutter_test:
