--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <!-- Override Firebase Firestore's minSdk requirement -->
     <uses-sdk tools:overrideLibrary="com.google.firebase.firestore" />
+ <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
 
     <application
         android:name="${applicationName}"
