--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,12 +11,14 @@ if (keystorePropertiesFile.exists()) {
 }
 android {
     namespace = "com.bbarna.b_barna_app"
-    compileSdk = 34
-    ndkVersion = flutter.ndkVersion
+    compileSdk = 35
+    ndkVersion = "25.2.9519653"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
+
     }
 
     kotlinOptions {
@@ -28,10 +30,10 @@ android {
         applicationId = "com.bbarna.b_barna_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = 23
+        minSdkVersion flutter.minSdkVersion
         targetSdk = 34
-        versionCode = 4
-        versionName = "1.0.4"
+        versionCode = 5
+        versionName = "1.0.5"
     }
 
     signingConfigs {
@@ -55,14 +57,21 @@ android {
     }
 }
 dependencies {
-  // Import the Firebase BoM
-  implementation(platform("com.google.firebase:firebase-bom:34.0.0"))
+ // ✅ Required for core library desugaring (updated version)
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.1.4"
 
+    // ✅ Firebase (BoM)
+    implementation platform("com.google.firebase:firebase-bom:34.0.0")
+    implementation "com.google.firebase:firebase-analytics"
+    implementation "com.google.firebase:firebase-auth"
+    implementation "com.google.firebase:firebase-firestore"
 
-  // TODO: Add the dependencies for Firebase products you want to use
-  // When using the BoM, don't specify versions in Firebase dependencies
-  implementation("com.google.firebase:firebase-analytics")
+    // ✅ AndroidX + Kotlin
+    implementation "androidx.core:core-ktx:1.12.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
 
+    // ✅ Flutter Local Notifications
+    implementation project(':flutter_local_notifications')
 
   // Add the dependencies for any other desired Firebase products
   // https://firebase.google.com/docs/android/setup#available-libraries
