--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,45 +36,37 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   carousel_slider: ^5.1.1
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.2.1
   linear_timer: ^2.0.0
-  percent_indicator: ^4.2.3
-  youtube_player_flutter: ^9.0.1
-  win32: ^5.5.0
-
+  percent_indicator: ^4.2.5
+  youtube_player_flutter: ^9.1.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.30.1
-  flutter_widget_from_html: ^0.16.0
-  share_plus: ^9.0.0
-  shared_preferences: ^2.2.3
-  lottie: ^3.1.2
+  firebase_core: ^4.2.0
+  flutter_widget_from_html: ^0.17.1
+  share_plus: ^12.0.1
+  shared_preferences: ^2.5.3
+  lottie: ^3.3.2
   pin_code_fields: ^8.0.1
-  razorpay_flutter: ^1.3.0
-  cloud_firestore: ^4.17.3
-  firebase_auth: ^4.19.5
-  firebase_app_check: ^0.2.2+6
-  image_picker: ^1.0.4
-  firebase_storage: ^11.7.7
-  provider: ^6.1.2
-  marquee: ^2.2.3
+  razorpay_flutter: ^1.4.0
+  cloud_firestore: ^6.0.3
+  firebase_auth: ^6.1.1
+  image_picker: ^1.2.0
+  firebase_storage: ^13.0.3
+  provider: ^6.1.5+1
+  marquee: ^2.3.0
   flutter_html: ^3.0.0
-  flutter_pdfview: ^1.3.4
-  path_provider: ^2.1.4
-  http: ^1.2.2
+  flutter_pdfview: ^1.4.3
   audio_video_progress_bar: ^2.0.3
-  just_audio: ^0.9.42
+  just_audio: ^0.10.5
   rxdart: ^0.28.0
-  dio: ^5.7.0
-  flutter_file_downloader: ^2.0.0
-  url_launcher: ^6.1.10
+  url_launcher: ^6.3.2
   intl: ^0.20.2
   flutter_html_table: ^3.0.0
   flutter_spinkit: ^5.2.2
-  printing: ^5.12.0
-  flutter_local_notifications: ^17.2.2
-  permission_handler: ^11.3.1
+  flutter_file_downloader: ^2.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -85,7 +77,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
